demo and readme updates
Signed-off-by: Gaurav Gahlot <gauravgahlot0107@gmail.com>

--- a/deploy/image-cloner-deploy.yaml
+++ b/deploy/image-cloner-deploy.yaml
@@ -24,6 +24,9 @@ spec:
           - "--tls-private-key-file=/tls/tls.key"
         ports:
         - containerPort: 443
+        env:
+        - name: REGISTRY
+          value: ""
         volumeMounts:
         - name: tls
           mountPath: "/tls"
